<resources>
    <string name="app_name">yabamiru!</string>

    <string-array name="titles">
        <item>title1</item>
        <item>title2</item>
        <item>title3</item>
        <item>title4</item>
        <item>title5</item>
    </string-array>

    <string-array name="deadlines">
        <item>deadline1</item>
        <item>deadline2</item>
        <item>deadline3</item>
        <item>deadline4</item>
        <item>deadline5</item>
    </string-array>

    <string-array name="percents">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
    </string-array>

    <string-array name="tags1">
        <item>tags1-1</item>
        <item>tags1-2</item>
    </string-array>

    <string-array name="tags2">
        <item>tags2-1</item>
        <item>tags2-2</item>
    </string-array>

    <string-array name="tags3">
        <item>tags3-1</item>
        <item>tags3-2</item>
    </string-array>

    <string-array name="tags4">
        <item>tags4-1</item>
        <item>tags4-2</item>
    </string-array>

    <string-array name="tags5">
        <item>tags5-1</item>
        <item>tags5-2</item>
    </string-array>

    <string name="max_yabasa">最高危険度 %1$d%%</string>
    <string name="min_yabasa">最低危険度 %1$d%%</string>
    <string name="average_yabasa">平均危険度 %1$d%%</string>
    <string name="card_dead_line">Dead Line : %1$2d/%2$d  %3$d:%4$d</string>
    <string name="card_title">Title : %1$s</string>
    <string name="card_percent">%1$d%%</string>
    <string name="input_hint_title">Titleを入力</string>
    <string name="title_weight">重み:</string>
    <string name="title_deadline">期限:</string>
    <string name="input_hint_day">日付を入力</string>
    <string name="input_hint_time">時間を入力</string>
    <string name="title_tag">タグ:</string>
    <string name="title_memo">メモ:</string>
    <string name="dead">死</string>
    <string name="easy">楽</string>
    <string name="title_title">Title:</string>
    <string name="input_hint_memo">メモを入力</string>
    <string name="add">追加</string>
    <string name="add_plan">予定を追加</string>
    <string name="input_hint_tag">タグを入力</string>

</resources>
