<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/min_yabasa"
            android:layout_width="369dp"
            android:layout_height="40dp"
            android:id="@+id/min_risk" android:textSize="30sp"
            android:textColor="#000000" android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/avg_risk"
            app:layout_constraintStart_toStartOf="@+id/max_risk" app:layout_constraintEnd_toEndOf="@+id/max_risk"
            tools:text="最低危険度　　20%"/>
    <TextView
            android:text="@string/max_yabasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/max_risk" android:textSize="30sp"
            android:textColor="#FF0000" android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="92dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            tools:text="最高危険度　　80%"/>
    <TextView
            android:text="@string/average_yabasa"
            android:layout_width="369dp"
            android:layout_height="40dp"
            android:id="@+id/avg_risk" android:textSize="30sp"
            android:textColor="#000000" android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/max_risk"
            app:layout_constraintStart_toStartOf="@+id/max_risk" app:layout_constraintEnd_toEndOf="@+id/max_risk"
            tools:text="平均危険度　　56%"/>
    <TextView
            android:text="未完了タスク"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/non_complete_task" android:textColor="#FFA600"
            android:textSize="36sp" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/max_risk" app:layout_constraintStart_toStartOf="@+id/max_risk"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/analysis_guideline"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/analysis_guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.5"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/non_complete_task" android:id="@+id/active_task_recyclerView"/>
</android.support.constraint.ConstraintLayout>