<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/constraintLayout">
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="#EBFACA"
            app:cardCornerRadius="10dp" app:cardElevation="10dp"
            app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.75"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    tools:text="Title : 数理工の課題"
                    android:fontFamily="sans-serif"
                    android:text="@string/card_title"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="100sp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/card_percent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    tools:text="30%"
                    android:textAlignment="viewEnd"
                    android:gravity="center_vertical"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="100sp"
                    android:text="@string/card_percent"
                    android:autoSizeMinTextSize="10sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_title"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="8dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/card_tag_layout"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
            >
            </LinearLayout>
            <TextView
                    android:text="Tags : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/card_title"
                    android:id="@+id/textView4" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_title"/>
            <TextView
                    android:text="@string/card_dead_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_deadline"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintHorizontal_bias="0.0"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>